--- a/index.html
+++ b/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 	<title>Enlaces a archivos index.html</title>
+    <style>
+
+    </style>
 </head>
 <body>
 	<h1>Enlaces a archivos index.html</h1>
-	<ul id="enlaces"></ul>
+	<ul id="enlaces">
+        <li><a href="http://maurestor.github.io/24-news/index.html"></a></li>
+        <li><a href="http://maurestor.github.io/88-fm/index.html"></a></li>
+        <li><a href="http://maurestor.github.io/app/index.html"></a></li>
+        <li><a href="http://maurestor.github.io/Day/index.html"></a></li>
+        <li><a href="http://maurestor.github.io/fox/index.html"></a></li>
+        <li><a href="http://maurestor.github.io/Medicio/index.html"></a></li>
+    </ul>
 
 </body>
 </html>
